// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme mount basic 1`] = `
.emotion-0 {
  background-color: red;
}

.emotion-0 {
  background-color: red;
}

<Greeting>
  <div
    className="emotion-0"
  >
    hello
  </div>
</Greeting>
`;

exports[`enzyme mount with prop containing css element 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme mount with prop containing css element not at the top level 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    <div>
      <p
        className="emotion-0"
        id="something"
      >
        Hello
      </p>
       
      World!
    </div>
  </Greeting>
</div>
`;

exports[`enzyme mount with prop containing css element with other label 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <Thing
    content={
      <div
        css="unknown styles"
      />
    }
  >
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </Thing>
</Greeting>
`;

exports[`enzyme mount with prop containing css element with other props 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<Greeting
  content={
    <p
      css="unknown styles"
      id="something"
    >
      Hello
    </p>
  }
>
  <div>
    <p
      className="emotion-0"
      id="something"
    >
      Hello
    </p>
     
    World!
  </div>
</Greeting>
`;

exports[`enzyme shallow basic 1`] = `
<div
  className=""
  css="unknown styles"
>
  hello
</div>
`;

exports[`enzyme shallow with prop containing css element 1`] = `
<div>
  <p
    className=""
    css="unknown styles"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme shallow with prop containing css element not at the top level 1`] = `
<div>
  <Greeting
    content={
      <p
        css="unknown styles"
        id="something"
      >
        Hello
      </p>
    }
  >
    World!
  </Greeting>
</div>
`;

exports[`enzyme shallow with prop containing css element with other label 1`] = `
<Thing
  content={
    <div
      css="unknown styles"
    />
  }
>
  <p
    className=""
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</Thing>
`;

exports[`enzyme shallow with prop containing css element with other props 1`] = `
<div>
  <p
    className=""
    css="unknown styles"
    id="something"
  >
    Hello
  </p>
   
  World!
</div>
`;

exports[`enzyme with prop containing css element in fragment 1`] = `
.emotion-0 {
  background-color: blue;
}

.emotion-0 {
  background-color: blue;
}

<div>
  Array [
    "x",
    <div
      className="emotion-0"
    >
      y
    </div>,
  ]
</div>
`;
